--- a/notebook/validate.ipynb
+++ b/notebook/validate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,40 +18,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.23371296e-01, 3.42522198e-01, 3.47252000e-01, 4.52221934e-01,\n",
-       "       3.34428510e-01, 5.06470143e-01, 6.25040180e-02, 9.34078475e-01,\n",
-       "       1.50729789e-04, 2.66583515e-01, 6.80883260e-01, 3.78895207e-02,\n",
-       "       1.62516128e-01, 5.06188136e-02, 8.28273030e-01, 5.11327707e-01,\n",
-       "       8.38603410e-01, 2.16678698e-01, 6.40611952e-01, 4.98551574e-01,\n",
-       "       8.92410415e-02, 7.41351407e-01, 2.09794751e-01, 8.45496711e-01,\n",
-       "       3.85863927e-01, 3.22592947e-01, 1.14884903e-01, 4.59344416e-01,\n",
-       "       2.77173112e-01, 8.02628632e-01, 5.85524954e-02, 6.19721089e-01,\n",
-       "       8.67340662e-01, 6.55402201e-01, 2.76577988e-01, 8.21277828e-01,\n",
-       "       8.77108269e-01, 8.01485563e-01, 4.08374185e-01, 7.67104905e-01,\n",
-       "       2.28304316e-02, 8.59727548e-01, 9.43697020e-01, 9.67639912e-02,\n",
-       "       4.60810691e-01, 9.60621188e-01, 5.32870089e-01, 2.64602313e-01,\n",
-       "       2.03336058e-01, 2.91030167e-01, 5.27211566e-01, 9.95052955e-01,\n",
-       "       9.25614944e-01, 8.47541488e-01, 8.85256433e-01, 6.18388717e-01,\n",
-       "       8.21971099e-02, 8.94097569e-01, 6.11199016e-01, 1.98410462e-01,\n",
-       "       6.76491480e-02, 4.29489870e-01, 4.56718583e-01, 5.72557658e-01,\n",
-       "       6.92843578e-01, 6.62390313e-01, 6.19493605e-01, 8.94683699e-01,\n",
-       "       4.25365755e-01, 1.80552445e-01, 9.40820078e-01, 5.85542618e-01,\n",
-       "       7.46651534e-01, 7.05705239e-01, 2.69292979e-01, 6.53502971e-01,\n",
-       "       5.89157023e-01, 8.13261921e-01, 7.44598780e-01, 3.09963057e-01,\n",
-       "       6.20307402e-01, 4.46495373e-01, 5.25596966e-01, 5.38887545e-01,\n",
-       "       7.36140538e-01, 2.21649388e-01, 4.83273191e-01, 6.49798104e-01,\n",
-       "       9.20167640e-01, 7.19987687e-01, 2.89186079e-01, 9.58203629e-01,\n",
-       "       9.19755286e-02, 2.22302314e-01, 5.32447415e-01, 3.10242786e-01,\n",
-       "       2.47164974e-01, 7.93994166e-01, 9.14436396e-01, 1.50677623e-01])"
+       "array([0.22138703, 0.34069846, 0.25643609, 0.09828976, 0.23915159,\n",
+       "       0.90832587, 0.94412156, 0.89445831, 0.1764104 , 0.13508948,\n",
+       "       0.55538673, 0.19161622, 0.88934169, 0.45178561, 0.17921094,\n",
+       "       0.30010714, 0.77964506, 0.53337437, 0.91548414, 0.86739691,\n",
+       "       0.23852329, 0.60283736, 0.20049503, 0.40620577, 0.54474881,\n",
+       "       0.88787967, 0.98997229, 0.09434407, 0.24659351, 0.44192054,\n",
+       "       0.56275801, 0.9217878 , 0.71545576, 0.49028562, 0.04883704,\n",
+       "       0.82670866, 0.58059401, 0.68054195, 0.79614678, 0.97313834,\n",
+       "       0.1448878 , 0.61610896, 0.14515817, 0.88090671, 0.01490781,\n",
+       "       0.87432451, 0.86573341, 0.37526334, 0.63648219, 0.1369678 ,\n",
+       "       0.19502525, 0.64666861, 0.115357  , 0.86600333, 0.37517526,\n",
+       "       0.8663552 , 0.39769091, 0.14291298, 0.08327757, 0.76966708,\n",
+       "       0.68572131, 0.0578683 , 0.69524619, 0.14079131, 0.14753518,\n",
+       "       0.51525664, 0.26842235, 0.55213666, 0.01516725, 0.44805599,\n",
+       "       0.05949004, 0.33556768, 0.74751089, 0.76730228, 0.88052572,\n",
+       "       0.98537967, 0.46184387, 0.19899847, 0.65785168, 0.88698332,\n",
+       "       0.86928436, 0.05521746, 0.84906263, 0.94991123, 0.20632653,\n",
+       "       0.11916972, 0.85927153, 0.27233954, 0.57574004, 0.11155074,\n",
+       "       0.08528503, 0.77492571, 0.58831019, 0.05132542, 0.96653565,\n",
+       "       0.96955062, 0.05828297, 0.11591544, 0.99219849, 0.53883919])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,37 +57,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.36935415,  0.71930434, -1.04856736,  0.21928795, -0.03215186,\n",
-       "        1.53733969, -0.28233187,  1.06643457, -0.47966834,  0.14610922,\n",
-       "        0.105599  , -2.23813247, -0.2183123 ,  0.54711653, -0.43687109,\n",
-       "       -1.87498796, -0.1804788 ,  2.04501363,  1.84194826, -1.01416846,\n",
-       "       -0.59553526,  1.29763415, -1.17972322,  1.31360258,  2.07421822,\n",
-       "        0.69847117,  0.04585395, -1.73511669,  0.63308075, -1.1189089 ,\n",
-       "        1.2682407 , -1.61947203, -0.51621656,  0.80099286, -0.55148148,\n",
-       "        1.01322187,  0.26424853, -0.74465848,  0.89267254, -0.64968125,\n",
-       "        0.77493095, -0.43044877,  0.02708997,  1.04532173, -0.21627412,\n",
-       "        0.13744535,  0.91887813, -1.82911407, -0.58050749, -1.59824136,\n",
-       "       -1.63792071,  1.02184993,  0.47519948,  0.89633653, -0.94983897,\n",
-       "       -1.4131623 ,  0.64456436, -0.41465802,  1.02818385, -0.43897533,\n",
-       "        0.81614617,  0.36903765, -0.14634243,  1.75463032,  0.08032849,\n",
-       "        0.81237099, -0.47676235,  0.13392835,  0.13251122,  1.61485964,\n",
-       "        0.2761995 , -3.33413687,  1.98030336, -2.12952007, -0.24302659,\n",
-       "        0.9508675 , -0.86210441,  1.27294737, -0.29243764,  0.36621048,\n",
-       "        0.7917096 ,  0.4622749 ,  0.52128937, -1.8834786 , -0.3392485 ,\n",
-       "       -1.03315322,  0.44535576,  0.96589727,  1.04865682,  0.1667518 ,\n",
-       "        1.42125809, -0.61048651,  0.9947965 , -1.94382785,  0.22116942,\n",
-       "       -0.22544345, -0.59710663,  1.34152262, -2.57088311, -1.01015013,\n",
-       "       -1.34476025, -0.32101088, -1.3238399 ,  2.10453881, -1.27768403,\n",
-       "        0.54944036,  0.05887888,  1.12559069,  0.03483922, -0.36431329])"
+       "array([ 1.91129556,  0.78126287, -0.21769622, -0.91193   ,  1.19148805,\n",
+       "        0.09334794,  1.6187861 ,  0.75742827,  0.47061309,  0.21491064,\n",
+       "        1.97345032,  1.75328979, -0.44899367,  0.1884733 , -1.2253716 ,\n",
+       "        1.32281212, -0.37264717, -0.75456958,  1.68893022, -0.67481086,\n",
+       "        1.57277645,  2.00712153, -0.19170576, -1.30570824, -0.40026492,\n",
+       "       -0.25157472, -0.83033583,  0.97409653, -0.20907166, -1.37498686,\n",
+       "       -0.33375344,  0.83950258, -0.71383729,  0.78238497,  0.14548978,\n",
+       "       -0.73518511,  1.48475038,  0.00935831,  0.04128315, -2.47172705,\n",
+       "       -2.22277331, -0.21958875,  1.75990119, -0.78392767, -0.93170337,\n",
+       "        0.47443285, -0.4979177 , -0.12057924, -0.00802732, -1.04664995,\n",
+       "        1.71433109, -1.32749756,  2.43130011, -0.66682442, -1.02347637,\n",
+       "       -0.76122571,  0.47241285, -0.22899192, -0.36859574,  0.31829808,\n",
+       "        1.32047744,  1.32515209, -1.05897127, -1.00147187, -0.53458041,\n",
+       "       -1.98162055,  0.18927319, -0.82140735, -0.21574419,  0.97524454,\n",
+       "       -0.44552441, -1.42430998, -0.3114137 ,  1.12598036,  0.24318639,\n",
+       "       -0.09016873,  0.23401412, -0.14589273, -1.31410299,  0.86307269,\n",
+       "        1.44593197,  0.33454934, -1.66903773,  0.9654283 , -0.02901477,\n",
+       "       -1.73065006, -0.22876438, -0.22131159, -2.00038414, -0.73855156,\n",
+       "        2.00072507,  0.26857244,  0.38318579,  0.70074797, -0.24355327,\n",
+       "        1.07702212,  0.9304811 ,  0.51807401,  0.68600574, -0.2980347 ,\n",
+       "       -0.07859387,  0.04594463,  1.66203098, -0.53201666, -1.02650772,\n",
+       "       -2.73346746,  0.15886367, -0.18945538,  0.1699742 ,  0.46278588])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.041209e-10"
+       "2.34e-14"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,49 +132,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/config/workspace/artifact/12152022__115329/data_ingestion/dataset/train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 4\n",
-      "2 5\n",
-      "3 6\n",
-      "4 7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(28950, 171)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "l1=[1,2,3,4]\n",
-    "l2=[4,5,6,7]\n",
-    "\n",
-    "for l1_val,l2_val in zip(l1,l2):\n",
-    "    print(l1_val,l2_val)"
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class         0\n",
+       "aa_000        0\n",
+       "ab_000    22355\n",
+       "ac_000     1729\n",
+       "ad_000     7377\n",
+       "          ...  \n",
+       "ee_007      304\n",
+       "ee_008      304\n",
+       "ee_009      304\n",
+       "ef_000     1391\n",
+       "eg_000     1391\n",
+       "Length: 171, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"/config/workspace/artifact/11272022__185759/data_ingestion/dataset/train.csv\")"
+    "df.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(df.iloc[:,[0]].drop(\"class\",axis=1).columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "glob(\"/config/workspace/saved_models/1/**/*.pkl\")"
    ]
